--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Bithoven\\Tickets\\": "src/"
+            "Bithoven\\Tickets\\": "src/",
+            "Bithoven\\Tickets\\Database\\Seeders\\": "database/seeders/"
         }
     },
     "autoload-dev": {
