--- a/composer.json
+++ b/composer.json
@@ -53,12 +53,14 @@
                 "roles-permissions"
             ],
             "permissions": [
-                "view-tickets",
-                "create-tickets",
-                "edit-tickets",
-                "delete-tickets",
-                "assign-tickets",
-                "manage-ticket-categories"
+                "extensions:tickets:base:view",
+                "extensions:tickets:base:create",
+                "extensions:tickets:base:edit",
+                "extensions:tickets:base:assign",
+                "extensions:tickets:categories:manage",
+                "extensions:tickets:templates:manage",
+                "extensions:tickets:automation:manage",
+                "extensions:tickets:sla:manage"
             ]
         }
     },
